parte_1/Respuestas tp2_parte1.txt
1.
a) Versi贸n del gcc

Apple clang version 14.0.3 (clang-1403.0.22.14.1)
Target: arm64-apple-darwin22.1.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

b) Archivo hola.c guardado.

c) gcc -Wall hola.c -o hola

Se gener贸 un archivo hola, de tipo ejecutable.

d) Se elimina el archivo, se ejecuta el comando y se obtiene lo siguiente:

hola.c:4:25: error: expected ';' after expression
        printf("Hola mundo!\n")
                               ^
                               ;
1 error generated.

El compilador, si marca el error generado. Tambien indica la linea en la cual se encuentra el mismo. No se genera el archivo ejecutable.

e) Se realizan los cambios en el archivo 'hola.c' y se ejecuta nuevamente el comando.

Ahora el ccompilador indica una advertencia. Se debe a que tenemos variables declaradas pero no estan siendo utilizadas. El comando o flag '-Wall'. Si se genera el archivo ejecutable.

---------------------------------------------------------------

2.
a) Archivo monto.c guardado.

b) Etapa de preprocesamiento: ".i"
Si. Si se puede visualizar el c贸digo. No, no se ven los comentarios. La constante IVA, ahora fue reemplazada en todos los lados donde se utiliza por su valor.

c) Etapa de Compilaci贸n: ".s"

Si. Unicamente se puede visualizar el texto "Monto a pagar = %f\n"

d) Etapa de Ensamblado: ".o"

Si. No, no puedo interpretarlo.

e) Etapa de enlazado:

Si, se genero el ejecutable "monto""










